@@ -40,11 +40,11 @@ Feel free to contact me (Dilyn Corner) at any of the following:
 
 Feel free to keep up with the broader KISS community at:
 
-- IRC:       #kisslinux at <a href=https://freenode.net>https://freenode.net</a> - idling as dilyn
-- Reddit:    <a href=https://reddit.com/r/kisslinux>https://reddit.com/r/kisslinux</a>     - u/dilyn
-- GitHub:    $/<a href=https://github.com/kiss-community>kiss-community</a>                   - $/<a href=https://github.com/dilyn-corner>dilyn-corner</a>
-- Devel:     dev@k1sslinux.org                  - Development Mailing List
-- Community: community@k1sslinux.org            - Community Mailing List
+- IRC:       #kisslinux at <a href=https://libera.chat>https://libera.chat</a> - idling as dilyn{[m],corner}
+- Reddit:    <a href=https://reddit.com/r/kisslinux>https://reddit.com/r/kisslinux</a>    - u/dilyn
+- GitHub:    $/<a href=https://github.com/kiss-community>kiss-community</a>                  - $/<a href=https://github.com/dilyn-corner>dilyn-corner</a>
+- Devel:     dev@k1sslinux.org                 - Development Mailing List
+- Community: community@k1sslinux.org           - Community Mailing List
 
 
 ________________________________________________________________________________
