@@ -1,0 +1,96 @@
+<!doctype html><html lang=en><link href='data:image/gif;base64,R0lGODlhEAAQAPH/AAAAAP8AAP8AN////yH5BAUAAAQALAAAAAAQABAAAAM2SLrc/jA+QBUFM2iqA2bAMHSktwCCWJIYEIyvKLOuJt+wV69ry5cfwu7WCVp2RSPoUpE4n4sEADs=' rel=icon><title>KISS - 20210519a</title><meta charset=utf-8><meta name=Description content="An independent Linux distribution with a focus on simplicity and the concept of less is more."><meta name=viewport content="width=device-width,initial-scale=1"><style>body{overflow-y:scroll;font:16px monospace,monospace}img,.c{display:table-cell;max-width:999px;max-width:80ch}pre{margin:0;overflow-x:hidden}@media(max-width:999px){.c{display:block;font-size:1.94vw}}@media(prefers-color-scheme:dark){body{background:#000;color:#fff}a{color:#6CF}}</style><div style="display:table;margin:16px auto"><div class=c><pre style="top:0;position:sticky;user-select:none;padding-right:64px">
+<a href=/ style="text-decoration:none;color:#a00">
+|/
+|\ISS
+</a>
+<a href=/news>News</a>
+<a href=/blog>Blog</a>
+
+<a href=/wiki>Wiki</a>
+
+<a href=/install>Install KISS</a>
+<a href=/faq>FAQ</a>
+
+<a href=/package-system>Package System</a>
+<a href=/package-manager>Package Manager</a>
+<a href=/software>Software</a>
+
+<a href=/guidestones>Guidestones</a>
+
+<a href=/testimonials>Testimonials</a>
+<a href=/screenshots>Screenshots</a>
+<a href=/team>Team</a>
+
+<a href=/contact>Contact</a>
+<a href=/donate>Donate</a>
+
+<a href=https://github.com/kiss-community/>GitHub</a>
+<a href=https://git.k1sslinux.org/>Git (mirror)</a>
+<a href=https://archive.k1sslinux.org/>ML (archive)</a>
+
+</pre></div><div class=c><pre>
+
+
+Subject Update on Dylan, IRC
+From    Dilyn Corner <dilyn.corner@k1sslinux.org>
+Date    Wed, 19 May 2021 17:27:00 -0500
+
+Two small updates to share with you all here!
+
+Bottom line up front: 
+    1) Dylan is okay!
+    2) We have moved from Freenode to Libera.Chat
+
+
+Details: 
+Previous attempts at divining Dylan's location or ways of contacting him were,
+as previously discussed, discarded. We wished him the best, and left it at that. 
+
+However! Someone (not Dylan) recently reached out to me with some news. They
+contacted who we assume to be Dylan's mum and kindly inquired as to how he was
+doing. She appreciated the concern for his wellbeing, and was able to confirm
+one of our suspicions: the mad lad was simply experiencing burn out. It's to be
+expected, given how hard he had been working for the last 18+ months! He was,
+after all, the sixth most active person on Github for a time - and is still in
+the top thirty <a href=#1>[1]</a>.
+
+We don't know if or when he'll return to this little project, but I think I
+speak for everyone when I say that we're glad to hear he's doing good and taking
+care of himself :) 
+
+
+For those of you not in-the-know, there has been a fair bit of drama in the land
+of IRC! Freenode is basically synonymous with IRC for many of us, but there has
+been a massive shakeup for the last long-while, ultimately culminating in the
+upheaval which occurred today! You can read a lot more details here <a href=#2>[2]</a> and I do
+not plan on rehashing a lot of it.  Many projects have moved to alternatives
+already, from the tiniest communities to the far larger organizations. KISS is
+following suit. We are migrating to where many other people are going:
+#kisslinux @ libera.chat. The #kisslinux channel on Freenode will be around for
+who knows how long, and I'll be in there for a little bit longer for those who
+can't access Libera for whatever reason (a Matrix bridge is in the works
+apparently, and they are still experiencing expected stability issues). We don't
+currently have a logbot in the channel, though one will probably makes it
+appearance soon (tomorrow, mayhaps).  As always, the mailing lists are still
+available for people who prefer not to deal with IRC at any level :) 
+
+
+That's all I had for you fine folx. Until next time!
+
+---
+    Dilyn
+
+
+<span id=1><a href=#1>[1]</a></span> <a href=https://commits.top/worldwide.html>https://commits.top/worldwide.html</a>
+<span id=2><a href=#2>[2]</a></span> <a href=http://kline.sh/>http://kline.sh/</a>
+
+
+________________________________________________________________________________
+
+Dylan Araps    (C) 2019-2020
+kiss-community (C) 2020-2021
+Dilyn Corner   (C) 2021
+
+Linux(R) is the registered trademark of Linus Torvalds in the U.S. and
+other countries.
+</pre></div></div>
